--- a/projects/blog/src/app/blog/blog-post/blog-post.component.html
+++ b/projects/blog/src/app/blog/blog-post/blog-post.component.html
@@ -1,4 +1,4 @@
 <ng-container *ngIf="post$ | async as post; else loading">
-  <div markdown [src]="post"></div>
+  <article markdown [src]="post"></article>
 </ng-container>
 <ng-template #loading>Loading post</ng-template>
