renamed home-> about and gave blog priority

--- a/projects/blog/src/app/app.component.html
+++ b/projects/blog/src/app/app.component.html
@@ -5,8 +5,8 @@
     </mat-toolbar-row>
     <mat-toolbar-row class="centered-row">
       <nav>
-        <a mat-button routerLink="/home">Home</a>
         <a mat-button routerLink="/blog">Blog</a>
+        <a mat-button routerLink="/about">About</a>
       </nav>
     </mat-toolbar-row>
   </mat-toolbar>
