--- a/projects/blog/src/app/blog/blog.component.html
+++ b/projects/blog/src/app/blog/blog.component.html
@@ -1,5 +1,5 @@
 <section>
   <img src="./assets/img/atom.svg" height="50px" />
-  <h2><a routerLink="'./blog/post/first-post'">First post</a></h2>
+  <h2><a routerLink="/blog/post/first-post">First post</a></h2>
   <time>{{date.toLocaleDateString()}}</time>
 </section>
