--- a/projects/blog/src/app/app.component.html
+++ b/projects/blog/src/app/app.component.html
@@ -1,14 +1,16 @@
 <header>
-  <mat-toolbar role="toolbar" attr.aria-labelledby="toolbar-header">
+  <mat-toolbar color="primary" role="toolbar" attr.aria-labelledby="toolbar-header">
     <mat-toolbar-row class="centered-row">
       <h1 id="toolbar-header">{{title}}</h1>
     </mat-toolbar-row>
     <mat-toolbar-row class="centered-row">
       <nav>
-        <a mat-button routerLink="/blog">Blog</a>
-        <a mat-button routerLink="/about">About</a>
+        <a mat-button color="accent" routerLink="/blog">Blog</a>
+        <a mat-button color="accent" routerLink="/about">About</a>
       </nav>
-      <mat-slide-toggle (change)="onThemeChange($event)" [checked]="true">Dark Theme!</mat-slide-toggle>
+      <mat-slide-toggle (change)="onThemeChange($event)" [checked]="isDarkMode">
+        {{slideToggleLabel}}
+      </mat-slide-toggle>
     </mat-toolbar-row>
   </mat-toolbar>
 </header>
