--- a/projects/blog/src/custom-theme.scss
+++ b/projects/blog/src/custom-theme.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@use './app/blog/blog.component-theme' as blog;
 
 @include mat.core();
 
@@ -7,7 +8,7 @@ $light-primary: mat.define-palette(mat.$blue-palette);
 $light-accent: mat.define-palette(mat.$orange-palette);
 // Define a dark theme
 $dark-primary: mat.define-palette(mat.$indigo-palette);
-$dark-accent: mat.define-palette(mat.$pink-palette);
+$dark-accent: mat.define-palette(mat.$amber-palette);
 // The warn palette is optional (defaults to red).
 $warn: mat.define-palette(mat.$red-palette);
 
@@ -25,7 +26,9 @@ $light-theme: mat.define-light-theme((color: (primary: $light-primary,
       )));
 
 @include mat.all-component-themes($dark-theme);
+@include blog.theme($dark-theme);
 
 .light-theme {
   @include mat.all-component-themes($light-theme);
+  @include blog.theme($light-theme);
 }
