line clamp and truncate excerpt

--- a/projects/blog/src/app/blog/blog.component.html
+++ b/projects/blog/src/app/blog/blog.component.html
@@ -5,7 +5,8 @@
     </div>
     <div class="column">
       <h1>{{blog.title}}</h1>
-      <p>Consequat clita sadipscing invidunt sit tempor autem ipsum ut accusam autem in sit amet accusam eirmod. Elitr
+      <p class="excerpt">Consequat clita sadipscing invidunt sit tempor autem ipsum ut accusam autem in sit amet accusam
+        eirmod. Elitr
         duis
         dolore iriure elit aliquyam et sea eirmod dolores sea sit odio stet consetetur sed molestie ipsum. Tincidunt
         nonumy
