--- a/projects/blog/src/app/blog/blog.component.scss
+++ b/projects/blog/src/app/blog/blog.component.scss
@@ -21,3 +21,11 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+
+.excerpt {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
