style blog list satisfiably for now; some wip stuff with applying themes to a component and messing with elevation & mixins

--- a/projects/blog/src/app/app.component.html
+++ b/projects/blog/src/app/app.component.html
@@ -5,8 +5,8 @@
     </mat-toolbar-row>
     <mat-toolbar-row class="centered-row">
       <nav>
-        <a mat-button color="accent" routerLink="/blog">Blog</a>
-        <a mat-button color="accent" routerLink="/about">About</a>
+        <a mat-button routerLink="/blog">Blog</a>
+        <a mat-button routerLink="/about">About</a>
       </nav>
       <mat-slide-toggle (change)="onThemeChange($event)" [checked]="isDarkMode">
         {{slideToggleLabel}}
