--- a/projects/blog/src/app/blog/blog-post/blog-post.component.html
+++ b/projects/blog/src/app/blog/blog-post/blog-post.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="blog$ | async as blog; else loading">
   <article class="article">
     <div class="heading">
-      <img src="./assets/img/{{blog.image}}" class="img" />
+      <img src="/assets/img/{{blog.image}}" class="img" />
       <h1>{{blog.title}}</h1>
       <span class="spacer"></span>
       <time>{{blog.date.toLocaleDateString()}}</time>
