next batch of blogs on scroll events

--- a/projects/blog/src/app/blog/blog.component.html
+++ b/projects/blog/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<cdk-virtual-scroll-viewport itemSize="10" class="viewport" autosize>
+<cdk-virtual-scroll-viewport itemSize="140" class="viewport" (scrolledIndexChange)="onScroll()">
   <mat-nav-list class="layout">
     <ng-container *cdkVirtualFor="let blog of blogs$ | async">
       <section mat-list-item class="section" routerLink="/blog/post/{{blog.fileName}}">
