init status service/component

--- a/projects/blog/src/app/app.component.html
+++ b/projects/blog/src/app/app.component.html
@@ -13,7 +13,7 @@
       </mat-slide-toggle>
     </mat-toolbar-row>
   </mat-toolbar>
-  <mat-progress-bar mode="determinate" color="warn" [value]="scrollProgress$ | async"></mat-progress-bar>
+  <status></status>
 </header>
 
 <main>
