--- a/projects/blog/src/app/status/status.component.html
+++ b/projects/blog/src/app/status/status.component.html
@@ -1,9 +1,7 @@
-<ng-container *ngIf="status$ | async as status; else loading">
+<ng-container *ngIf="status$ | async as status">
+  <mat-progress-bar *ngIf="status === null" mode="buffer" color="warn"></mat-progress-bar>
   <mat-progress-bar *ngIf="status.type === 'progress'" mode="determinate" color="warn" [value]="status.value">
   </mat-progress-bar>
   <mat-progress-bar *ngIf="status.type === 'query'" mode="query" color="warn"></mat-progress-bar>
-  <mat-progress-bar *ngIf="status.type === 'idle'" mode="determinate" color="warn" [value]="100"></mat-progress-bar>
+  <mat-progress-bar *ngIf="status.type === 'idle'" mode="determinate" color="accent" [value]="100"></mat-progress-bar>
 </ng-container>
-<ng-template #loading>
-  <mat-progress-bar mode="buffer" color="warn"></mat-progress-bar>
-</ng-template>
